# chess-cli

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  chess.cpp  set.cpp
src/: chess.cpp  hello.cpp
